Bug 562112 - Removes CSS for using the custom drawn scrollbar in Windwos Dark Theme
CSS change only, classes and tests will be removed via another commit

--- a/bundles/org.eclipse.ui.themes/css/e4-dark_win.css
+++ b/bundles/org.eclipse.ui.themes/css/e4-dark_win.css
@@ -175,17 +175,3 @@ ImageBasedFrame,
     color: #DDDDDD;
 }
 
-/* On the windows dark theme, the default is having the scrollbar themed
- * Note that the user may also set -Dswt.enable.themedScrollBar=false to force
- * it to false regardless of the CSS value.
- * swt-scrollbar-themed must be present for -Dswt.enable.themedScrollBar to be supported
- */
-StyledText {
-	swt-scrollbar-themed: true;
-
-	swt-scrollbar-background-color: #383838;
-	swt-scrollbar-foreground-color: #494949;
-	swt-scrollbar-width: 4px;
-	swt-scrollbar-border-radius: 4px;
-	swt-scrollbar-mouse-near-scroll-width: 15px;
-}
